cabal-version: 2.2
name:          e1340
version:       0.2.0.4
synopsis:      An e1337 with RedViz
description:   Please see the README on GitHub at <https://github.com/madjestic/e1338#readme>
homepage:      https://github.com/madjestic/e1338
license:       BSD-3-Clause
license-file:  LICENSE
author:        madjestic
maintainer:    madjestic13@gmail.com
copyright:     Vladimir Lopatin
category:      App
build-type:    Simple

extra-source-files:
                ChangeLog.md
                README.md
                LICENSE

source-repository head
  type:         git
  location:     https://github.com/madjestic/e1338

-- library
--   hs-source-dirs:
--                 src
--   ghc-options: -O2 -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
--   build-depends:
--                 base                
--               , aeson               
--               , aeson-pretty        
--               , bearriver           
--               , bytestring          
--               , containers          
--               , GLUtil              
--               , ilist               
--               , lens                
--               , linear              
--               , locators                        
--               , massiv              
--               , OpenGL              
--               , random                        
--               , sdl2                
--               , simple-affine-space 
--               , sort                
--               , split               
--               , store               
--               , text                
--               --, Yampa             
--               , vector              
--               , uuid                
  
--   exposed-modules:
--                 AppInput
--               , Camera
--               , Controllable
--               , Descriptor
--               , Application
--               , App
--               , Keyboard
--               , Material
--               , Model
--               , Object
--               , PGeo
--               , Project
--               , Rendering
--               , Solvable
--               , Texture
--               , Utils
--               , VAO
--               , Update
--               , Graph
--               , Drawable            
              
--   other-modules:
--                 Paths_e1338
--               , LoadShaders
--               , FromVector
--               , Mouse
--   default-language:
--                 Haskell2010

-- executable Grapher
--   main-is:             Grapher.hs
--   hs-source-dirs:
--                        app
--                      , src
--   ghc-options:   -O2 -threaded -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
--   -- cpp-options:   -DDEBUG  
--   build-depends:
--                  base                
--                , aeson               
--                , aeson-pretty                         
--                , bearriver           
--                , bytestring          
--                , containers                             
--                , ilist                                  
--                , lens                
--                , linear              
--                , locators                               
--                , massiv              
--                , random              
--                , vector
--                , GLUT
--                , GLUtil
--                , OpenGL
--                , sdl2
--                , simple-affine-space                  
--                , splitmix
--                , split                                  
--                , sort                                   
--                , store                                 
--                , text                
--                , uuid                
--   other-modules:
--                 Paths_e1338
--               , App
--               , AppInput
--               , Application
--               , Camera
--               , Controllable
--               , Descriptor
--               , FromVector
--               , Graph
--               , Keyboard
--               , LoadShaders
--               , Material
--               , Model
--               , Mouse
--               , Object
--               , PGeo
--               , Project
--               , Rendering
--               , Solvable
--               , Texture
--               , Utils
--               , VAO
--               , HMap
--               , Update
--               , Graph
--               , Drawable         

--   default-language:    Haskell2010
                
                                                                           
executable e1340
  main-is:      Main.hs
  hs-source-dirs:
                app
              , src
  ghc-options:   -O2 -threaded -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
  --ghc-options:   -O2 -threaded
  --cpp-options:   -DDEBUG
  build-depends:
                 base                
               , aeson               
               , aeson-pretty        
               , bearriver           
               , bytestring          
               , containers          
               , GLUtil              
               , ilist               
               , lens                
               , linear              
               , locators            
               , massiv              
               , OpenGL              
               , random                        
               , sdl2                
               , split               
               , store               
               , text                
               --, Yampa             
               , simple-affine-space 
               , sort                
               , vector              
               , uuid                

  other-modules:
                Paths_e1340
              , Graphics.RedViz.Rendering
              , Graphics.RedViz.Descriptor
              , Graphics.RedViz.Drawable
              , Graphics.RedViz.LoadShaders
              , Graphics.RedViz.Material
              , Graphics.RedViz.Texture
              , Graphics.RedViz.Utils
              , Graphics.RedViz.Camera
              , Graphics.RedViz.Controllable
              , Graphics.RedViz.Keyboard
              , Graphics.RedViz.Mouse
              , Graphics.RedViz.Project
              , Graphics.RedViz.Project.Model
              , Graphics.RedViz.Project.Project
              , Graphics.RedViz.FromVector
              , Graphics.RedViz.PGeo
              , Graphics.RedViz.VAO
              , Graphics.RedViz.Project.Utils
              , App
              , Application
              , Object
              , Solvable
              , Update
              -- , Model
              -- , LoadShaders
              -- , Project
              -- , Model
              -- , Texture
              -- , Object
              -- , Camera
              -- , Controllable
              -- , Descriptor
              -- , FromVector
              -- , Application
              -- , PGeo
              -- , AppInput
              -- , Keyboard
              -- , Mouse
              -- , Material
              -- , Solvable
              -- , Utils
              -- , VAO
              -- , Update
              -- , Graph
              -- , Drawable
              
  default-language:
                Haskell2010

-- executable genMaterial
--   main-is:      genMaterial.hs
--   hs-source-dirs:
--                 app
--               , src

--   ghc-options:   -O2 -threaded -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
--   --cpp-options:   -DDEBUG
--   build-depends:
--                 base                
--               , aeson               
--               , aeson-pretty        
--               , bytestring          
--               , containers                      
--               , directory           
--               , ilist                                                       
--               , lens                
--               , linear                         
--               , locators            
--               , OpenGL              
--               , random              
--               , simple-affine-space           
--               , split               
--               , text                
--               , uuid                
--               , vector                         

--   other-modules:
--                 Paths_e1338
--               , Material
--               , FromVector
--               , Utils
--               , Texture

--   default-language:
--                 Haskell2010

-- executable genProject
--   main-is:      genProject.hs
--   hs-source-dirs:
--                 app
--               , src
--   ghc-options:         -threaded -O2 -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
--   --cpp-options:         -DDEBUG
--   build-depends:
--                 base                
--               , aeson               
--               , aeson-pretty        
--               , bytestring          
--               , containers          
--               , ilist                                         
--               , lens                
--               , linear              
--               , locators                        
--               , OpenGL              
--               , random                        
--               , simple-affine-space           
--               , text                
--               , sort                
--               , uuid                
--               , vector                           

--   other-modules:
--                 Paths_e1338
--               , Model
--               , Project
--               , Texture
--               , Utils

--   default-language:
--                 Haskell2010

-- executable genUUID
--   main-is:      genUUID.hs
--   hs-source-dirs:
--                 app
--               , src
--   ghc-options:         -threaded -O2 -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
--   --cpp-options:         -DDEBUG
--   build-depends:
--                 base                
--               , aeson               
--               , aeson-pretty        
--               , bytestring          
--               , containers          
--               , directory           
--               , ilist               
--               , lens                
--               , linear              
--               , locators            
--               , OpenGL              
--               , simple-affine-space                         
--               , sort                
--               , text                
--               , uuid                
--               , random              
--               , vector              
              
--   other-modules:
--                 Paths_e1338
--               , Model
--               , Project
--               , Texture
--               , Material
--               , Utils

--   default-language:
--                 Haskell2010
                
-- executable geoIndexer
--   main-is:       geoIndexer.hs
--   hs-source-dirs:
--                 app
--               , src
--   ghc-options:         -threaded -O2 -with-rtsopts=-N -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
--   --cpp-options:         -DDEBUG
--   build-depends:
--                 base                 
--               , OpenGL               
--               , aeson                
--               , aeson-pretty         
--               , bytestring           
--               , containers           
--               , ilist                
--               , lens                 
--               , linear               
--               , locators                          
--               , massiv               
--               , optparse-applicative 
--               , random                                        
--               , store                
--               , text                 
--               , simple-affine-space  
--               , time-compat          
--               , time                 
--               , uuid                 
--               , vector               
              
--   other-modules:
--                 Paths_e1338
--               , FromVector
--               , Material
--               , Texture
--               , PGeo
--               , Utils
--               , VAO

--   default-language:
--                    Haskell2010

-- executable rpcShuffler
--   main-is:       rpcShuffler.hs
--   hs-source-dirs:
--                 app
--               , src
--   ghc-options:         -threaded -O2 -Wall -Werror -Wcompat -Widentities -Wno-unused-top-binds -Wno-orphans
--   --cpp-options:         -DDEBUG
--   build-depends:
--                 base                 
--               , aeson                
--               , aeson-pretty         
--               , bytestring           
--               , containers           
--               , text                 
--               , OpenGL               
--               , ilist                
--               , extra                
--               , lens                 
--               , locators                         
--               , random                                       
--               , store                
--               , simple-affine-space  
--               , linear               
--               , massiv               
--               , vector               
--               , uuid                 
              
--   other-modules:
--                 Paths_e1338
--               , FromVector
--               , Material
--               , PGeo
--               , Utils
--               , VAO
--               , Texture
              
--   default-language:
--                 Haskell2010                   
